src/sass/components/_feed-grid.scss
.feed-grid {
    display: grid;
    grid-template-columns: 350px 374px 374px;
    grid-gap: 24px;

    @media (max-width: 1440px) {
        justify-content: center;
        grid-template-columns: 374px 374px;
    }
    @include tablet {
        flex-direction: column;
    }
    @include media(920px) {
        display: flex;
    }

    &__item {
        @include media(920px) {
            display: flex;
            justify-content: center;
        }

        &-1 {
            grid-column-start: 1;
            grid-column-end: 1;
            grid-row-start: 1;
            grid-row-end: 3;
            @include media(920px) {
                display: flex;
                justify-content: center;
            }
        }

        &-2 {
            grid-column-start: 2;
            grid-column-end: 4;
            grid-row-start: 1;
            grid-row-end: 1;
        }

        &-3 {
            grid-column-start: 2;
            grid-column-end: 2;
            grid-row-start: 2;
            grid-row-end: 2;
        }

        &-4 {
            grid-column-start: 3;
            grid-column-end: 3;
            grid-row-start: 2;
            grid-row-end: 2;
            @include media(1440px) {
                grid-column-start: 1;
                grid-column-end: 1;
                grid-row-start: 3;
                grid-row-end: 3;
            }
        }

        &-5 {
            grid-column-start: 2;
            grid-column-end: 2;
            grid-row-start: 3;
            grid-row-end: 3;
        }

        &-6 {
            grid-column-start: 3;
            grid-column-end: 3;
            grid-row-start: 3;
            grid-row-end: 3;
            @include media(1440px) {
                grid-column-start: 1;
                grid-column-end: 1;
                grid-row-start: 4;
                grid-row-end: 4;
            }
        }
    }
}

